@@ -91,26 +91,47 @@ if args.unc:
     #  m_e: Electron mass
     #  m_p: Proton mass
     #  m_n: Neutron mass
-    R_i = (ureg._units["R_inf"].converter.scale, 0.0000000000021e7)
-    g_e = (ureg._units["g_e"].converter.scale, 0.00000000000035)
-    m_u = (ureg._units["m_u"].converter.scale, 0.00000000050e-27)
-    m_e = (ureg._units["m_e"].converter.scale, 0.00000000028e-30)
-    m_p = (ureg._units["m_p"].converter.scale, 0.00000000051e-27)
-    m_n = (ureg._units["m_n"].converter.scale, 0.00000000095e-27)
+    #  x_Cu: Copper x unit
+    #  x_Mo: Molybdenum x unit
+    #  A_s: Angstrom star
+    R_i = (ureg._units["R_inf"].converter.scale, 0.0000000000012e7)
+    g_e = (ureg._units["g_e"].converter.scale, 0.00000000000036)
+    m_u = (ureg._units["m_u"].converter.scale, 0.00000000052e-27)
+    m_e = (ureg._units["m_e"].converter.scale, 0.0000000028e-31)
+    m_p = (ureg._units["m_p"].converter.scale, 0.00000000052e-27)
+    m_n = (ureg._units["m_n"].converter.scale, 0.00000000085e-27)
+    x_Cu = (ureg._units["x_unit_Cu"].converter.scale, 0.00000028e-13)
+    x_Mo = (ureg._units["x_unit_Mo"].converter.scale, 0.00000053e-13)
+    A_s = (ureg._units["angstrom_star"].converter.scale, 0.00000090e-10)
     if args.corr:
+        # fmt: off
         # Correlation matrix between measured constants (to be completed below)
-        #          R_i       g_e       m_u       m_e       m_p       m_n
+        #         R_i       g_e      m_u      m_e      m_p      m_n     x_Cu     x_Mo      A_s
         corr = [
-            [1.0, -0.00206, 0.00369, 0.00436, 0.00194, 0.00233],  # R_i
-            [-0.00206, 1.0, 0.99029, 0.99490, 0.97560, 0.52445],  # g_e
-            [0.00369, 0.99029, 1.0, 0.99536, 0.98516, 0.52959],  # m_u
-            [0.00436, 0.99490, 0.99536, 1.0, 0.98058, 0.52714],  # m_e
-            [0.00194, 0.97560, 0.98516, 0.98058, 1.0, 0.51521],  # m_p
-            [0.00233, 0.52445, 0.52959, 0.52714, 0.51521, 1.0],
-        ]  # m_n
+            [ 1.00000, -0.00122, 0.00438, 0.00225, 0.00455, 0.00277, 0.00000, 0.00000, 0.00000],  # R_i
+            [-0.00122,  1.00000, 0.97398, 0.97555, 0.97404, 0.59702, 0.00000, 0.00000, 0.00000],  # g_e
+            [ 0.00438,  0.97398, 1.00000, 0.99839, 0.99965, 0.61279, 0.00000, 0.00000, 0.00000],  # m_u
+            [ 0.00225,  0.97555, 0.99839, 1.00000, 0.99845, 0.61199, 0.00000, 0.00000, 0.00000],  # m_e
+            [ 0.00455,  0.97404, 0.99965, 0.99845, 1.00000, 0.61281, 0.00000, 0.00000, 0.00000],  # m_p
+            [ 0.00277,  0.59702, 0.61279, 0.61199, 0.61281, 1.00000,-0.00098,-0.00108,-0.00063],  # m_n
+            [ 0.00000,  0.00000, 0.00000, 0.00000, 0.00000,-0.00098, 1.00000, 0.00067, 0.00039],  # x_Cu
+            [ 0.00000,  0.00000, 0.00000, 0.00000, 0.00000,-0.00108, 0.00067, 1.00000, 0.00100],  # x_Mo
+            [ 0.00000,  0.00000, 0.00000, 0.00000, 0.00000,-0.00063, 0.00039, 0.00100, 1.00000],  # A_s
+        ]
+        # fmt: on
         try:
-            (R_i, g_e, m_u, m_e, m_p, m_n) = uncertainties.correlated_values_norm(
-                [R_i, g_e, m_u, m_e, m_p, m_n], corr
+            (
+                R_i,
+                g_e,
+                m_u,
+                m_e,
+                m_p,
+                m_n,
+                x_Cu,
+                x_Mo,
+                A_s,
+            ) = uncertainties.correlated_values_norm(
+                [R_i, g_e, m_u, m_e, m_p, m_n, x_Cu, x_Mo, A_s], corr
             )
         except AttributeError:
             raise Exception(
@@ -123,6 +144,9 @@ if args.unc:
         m_e = uncertainties.ufloat(*m_e)
         m_p = uncertainties.ufloat(*m_p)
         m_n = uncertainties.ufloat(*m_n)
+        x_Cu = uncertainties.ufloat(*x_Cu)
+        x_Mo = uncertainties.ufloat(*x_Mo)
+        A_s = uncertainties.ufloat(*A_s)
 
     _set("R_inf", R_i)
     _set("g_e", g_e)
@@ -130,38 +154,15 @@ if args.unc:
     _set("m_e", m_e)
     _set("m_p", m_p)
     _set("m_n", m_n)
+    _set("x_unit_Cu", x_Cu)
+    _set("x_unit_Mo", x_Mo)
+    _set("angstrom_star", A_s)
 
     # Measured constants with zero correlation
     _set(
         "gravitational_constant",
         uncertainties.ufloat(
             ureg._units["gravitational_constant"].converter.scale, 0.00015e-11
-        ),
-    )
-
-    _set(
-        "d_220",
-        uncertainties.ufloat(ureg._units["d_220"].converter.scale, 0.000000032e-10),
-    )
-
-    _set(
-        "K_alpha_Cu_d_220",
-        uncertainties.ufloat(
-            ureg._units["K_alpha_Cu_d_220"].converter.scale, 0.00000022
-        ),
-    )
-
-    _set(
-        "K_alpha_Mo_d_220",
-        uncertainties.ufloat(
-            ureg._units["K_alpha_Mo_d_220"].converter.scale, 0.00000019
-        ),
-    )
-
-    _set(
-        "K_alpha_W_d_220",
-        uncertainties.ufloat(
-            ureg._units["K_alpha_W_d_220"].converter.scale, 0.000000098
         ),
     )
 
